Fix the flickering on the nav bar

--- a/restaurant_booking_system/bookings/static/bookings/css/styles.css
+++ b/restaurant_booking_system/bookings/static/bookings/css/styles.css
@@ -73,7 +73,7 @@ body {
     content: '';
     position: absolute;
     top: 0;
-    left: -100%;
+    left: 0;
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, transparent, rgba(231, 76, 60, 0.2), transparent);
@@ -167,7 +167,7 @@ body {
     content: '';
     position: absolute;
     top: 0;
-    /* left: -100%;*/
+    left: -100%;
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
